node_modules > react-native > react.gradle
            doLast {
                def moveFunc = { resSuffix ->
                    File originalDir = file("$buildDir/generated/res/react/release/drawable-${resSuffix}");
                    if (originalDir.exists()) {
                        File destDir = file("$buildDir/../src/main/res/drawable-${resSuffix}");
                        ant.move(file: originalDir, tofile: destDir);
                    }
                }
                moveFunc.curry("ldpi").call()
                moveFunc.curry("mdpi").call()
                moveFunc.curry("hdpi").call()
                moveFunc.curry("xhdpi").call()
                moveFunc.curry("xxhdpi").call()
                moveFunc.curry("xxxhdpi").call()
            }

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,9 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_RELEASE_STORE_FILE=call_me_timer.keystore
+MYAPP_RELEASE_KEY_ALIAS=call_me_timer
+MYAPP_RELEASE_STORE_PASSWORD=Hzj950718
+MYAPP_RELEASE_KEY_PASSWORD=Hzj950718
+
+android.enableAapt2=false
