--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "build-ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output release_ios/index.ios.jsbundle --assets-dest release_ios/"
+    "build-ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output release_ios/index.ios.jsbundle --assets-dest release_ios/",
+    "build-android": "react-native bundle --entry-file index.js --platform android --dev false --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
   },
   "dependencies": {
     "animejs": "^3.1.0",
@@ -21,6 +22,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-modalbox": "^2.0.0",
+    "react-native-storage": "^1.0.1",
     "stream": "0.0.2",
     "util": "^0.12.1"
   },
